@@ -25,7 +25,7 @@ AC_INIT([sample], [0.5])
 # Call TEA_INIT as the first TEA_ macro to set up initial vars.
 # This will define a ${TEA_PLATFORM} variable == "unix" or "windows"
 # as well as PKG_LIB_FILE and PKG_STUB_LIB_FILE.
-# --------------------------------------------------------------------
+#--------------------------------------------------------------------
 
 TEA_INIT([3.9])
 
