@@ -1,3 +1,8 @@
+2010-12-15  Stuart Cassoff  <stwo@users.sourceforge.net>
+
+	* Makefile.in:	Tidy: Whitespace, formatting, spelling.
+	* configure.in:	No functional change.
+
 2012-08-01  Jan Nijtmans <nijtmans@users.sf.net>
 
 	* win/makefile.vc: Sync with latest Tcl 8.6 updates
